Added definition for Ancient Computer. Fixed a bug in GameTestBuilder with pre-game stop action.